@@ -102,28 +102,32 @@ class Smarty_Internal_Config_File_Compiler
     {
         $this->template = $template;
         $this->template->compiled->file_dependency[ $this->template->source->uid ] =
-            array($this->template->source->filepath, $this->template->source->getTimeStamp(),
+            array($this->template->source->filepath,
+                  $this->template->source->getTimeStamp(),
                   $this->template->source->type);
         if ($this->smarty->debugging) {
-            if (!isset( $this->smarty->_debug)) {
-                $this->smarty->_debug  = new Smarty_Internal_Debug();
+            if (!isset($this->smarty->_debug)) {
+                $this->smarty->_debug = new Smarty_Internal_Debug();
             }
             $this->smarty->_debug->start_compile($this->template);
         }
         // init the lexer/parser to compile the config file
-        /* @var Smarty_Internal_ConfigFileLexer $this->lex */
-        $this->lex = new $this->lexer_class(str_replace(array("\r\n", "\r"), "\n", $template->source->getContent()) . "\n",
-                                      $this);
-        /* @var Smarty_Internal_ConfigFileParser $this->parser */
+        /* @var Smarty_Internal_ConfigFileLexer $this ->lex */
+        $this->lex = new $this->lexer_class(str_replace(array("\r\n",
+                                                              "\r"), "\n", $template->source->getContent()) . "\n",
+                                            $this);
+        /* @var Smarty_Internal_ConfigFileParser $this ->parser */
         $this->parser = new $this->parser_class($this->lex, $this);
 
-        if (function_exists('mb_internal_encoding') && ((int) ini_get('mbstring.func_overload')) & 2) {
+        if (function_exists('mb_internal_encoding')
+            && function_exists('ini_get')
+            && ((int) ini_get('mbstring.func_overload')) & 2
+        ) {
             $mbEncoding = mb_internal_encoding();
             mb_internal_encoding('ASCII');
         } else {
             $mbEncoding = null;
         }
-
         if ($this->smarty->_parserdebug) {
             $this->parser->PrintTrace();
         }
